--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ img{
 .cross{
     position: absolute;
     right: 15px;
-    top: 0;
+    top: 15px;
     font-size: 32px;
     color: white;
     z-index: 60;
